# Pirouette-Compiler

./: .gitattributes  .gitignore  .ocamlformat  Makefile  Pirouette.opam  README.md  config.conf  dune  dune-project  exprint.ml  http_pirc.opam  input.txt  makecode.sh  output.ml  pirc.opam  pirouette.opam  pirproj.sh  readme.md
examples/: #Run_Benchmark.sh#  #bcast_fix.pir#  #bcast_fix_opt.ml#  #bcast_opt.pir#  #koc_opt.pir#  #koc_opt_collatz10_arb_10.pir#  #koc_opt_collatz_arb.pir#  #koc_opt_three.pir#  #koc_unopt.ml#  #koc_unopt_collatz.ml#  #koc_unopt_collatz10_arb_10.ml#  #koc_unopt_collatz10_arb_10.pir#  #koc_unopt_collatz15_arb_10.pir#  #koc_unopt_collatz_arb.ml#  #pingpong.pir#  .#koc_opt_collatz13_arb_10.pir  .#koc_opt_three.pir  .#pingpong.pir  .gitignore  1.R.ml  1.pir  1.txt  2.R.ml  2.pir  3.pir  4.pir  5.pir  6.pir  7.pir  8.pir  Command_to_run  Context_Switch.sh  Pir EPP.txt  Plots  Run_Benchmark.sh  Run_MPI_Benchmark.sh  SE.pir  bcast  bcast_fix  bcast_fix.pir  (+141 more)
examples/11P/: Graph_Info_Plot.txt  Info.txt  graph.sh
examples/13P/: Graph_Info.txt  Graph_Info_Plot.txt  graph.sh
examples/15P/: Graph_Plot.txt  Graph_Plot_Info.txt  graph.sh
examples/9P/: Graph_Info.txt  Graph_Info_Plot.txt  graph.sh
examples/Execution_Scripts/: #graph.sh#  graph.sh
examples/MPI_Graph/: #graph.sh#  Graph_Info.txt  Graph_Info_Plot.txt  Graph_Info_Variance_Plot.txt  Graph_Speedup_Info.txt  graph_speedup.sh  graph_variance.sh
examples/MPI_Opt_10R6/: Result_mpi_koc_collatz_opt_two.mpi.exe_0.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_1.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_3.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_4.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_7.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_8.txt
examples/MPI_Opt_10R7/: Result_mpi_koc_collatz_opt_two.mpi.exe_1.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_2.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_3.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_4.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_5.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_8.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_9.txt
examples/MPI_Opt_2x10R6/: Result_mpi_koc_collatz_opt_two.mpi.exe_1.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_6.txt  Result_mpi_koc_collatz_opt_two.mpi.exe_8.txt
examples/MPI_Unopt_10R6/: Result_mpi_koc_collatz_unopt.mpi.exe_0.txt  Result_mpi_koc_collatz_unopt.mpi.exe_1.txt  Result_mpi_koc_collatz_unopt.mpi.exe_2.txt  Result_mpi_koc_collatz_unopt.mpi.exe_4.txt  Result_mpi_koc_collatz_unopt.mpi.exe_5.txt  Result_mpi_koc_collatz_unopt.mpi.exe_7.txt
examples/MPI_Unopt_10R7/: Result_mpi_koc_collatz_unopt.mpi.exe_5.txt  Result_mpi_koc_collatz_unopt.mpi.exe_7.txt  Result_mpi_koc_collatz_unopt.mpi.exe_8.txt  Result_mpi_koc_collatz_unopt.mpi.exe_9.txt
examples/MPI_Unopt_10R7_Re/: Result_mpi_koc_collatz_unopt.mpi.exe_0.txt  Result_mpi_koc_collatz_unopt.mpi.exe_1.txt  Result_mpi_koc_collatz_unopt.mpi.exe_2.txt  Result_mpi_koc_collatz_unopt.mpi.exe_3.txt  Result_mpi_koc_collatz_unopt.mpi.exe_4.txt  Result_mpi_koc_collatz_unopt.mpi.exe_5.txt  Result_mpi_koc_collatz_unopt.mpi.exe_6.txt  Result_mpi_koc_collatz_unopt.mpi.exe_7.txt  Result_mpi_koc_collatz_unopt.mpi.exe_8.txt  Result_mpi_koc_collatz_unopt.mpi.exe_9.txt  process.sh
examples/MPI_Unopt_2x10R6/: Result_mpi_koc_collatz_unopt.mpi.exe_1.txt  Result_mpi_koc_collatz_unopt.mpi.exe_2.txt  Result_mpi_koc_collatz_unopt.mpi.exe_3.txt  Result_mpi_koc_collatz_unopt.mpi.exe_4.txt  Result_mpi_koc_collatz_unopt.mpi.exe_5.txt  Result_mpi_koc_collatz_unopt.mpi.exe_6.txt  Result_mpi_koc_collatz_unopt.mpi.exe_7.txt  Result_mpi_koc_collatz_unopt.mpi.exe_8.txt
examples/OCaml_Tests/: AP_Collatz  AP_Factorial  collatz_gen.txt  pow_gen
examples/Opt_Collatz15_Arb100_10/: Result_koc_opt15_collatz_arb_10_2.txt  Result_koc_opt15_collatz_arb_10_4.txt  Result_koc_opt15_collatz_arb_10_5.txt  Result_koc_opt15_collatz_arb_10_6.txt  Result_koc_opt15_collatz_arb_10_7.txt  Result_koc_opt15_collatz_arb_10_9.txt
examples/Opt_Collatz15_Arb125_10/: Result_koc_opt15_collatz_arb_10_4.txt  Result_koc_opt15_collatz_arb_10_5.txt  Result_koc_opt15_collatz_arb_10_6.txt  Result_koc_opt15_collatz_arb_10_7.txt  Result_koc_opt15_collatz_arb_10_8.txt  Result_koc_opt15_collatz_arb_10_9.txt
examples/Opt_Collatz15_Arb50_10/: Result_koc_opt15_collatz_arb_10_1.txt  Result_koc_opt15_collatz_arb_10_4.txt  Result_koc_opt15_collatz_arb_10_9.txt
examples/Opt_Collatz15_Arb75_10/: Result_koc_opt15_collatz_arb_10_0.txt  Result_koc_opt15_collatz_arb_10_1.txt  Result_koc_opt15_collatz_arb_10_2.txt  Result_koc_opt15_collatz_arb_10_3.txt  Result_koc_opt15_collatz_arb_10_4.txt  Result_koc_opt15_collatz_arb_10_6.txt  Result_koc_opt15_collatz_arb_10_8.txt
examples/Opt_Collatz15_Arb75_Redo/: Result_koc_opt15_collatz_arb_10_0.txt  Result_koc_opt15_collatz_arb_10_1.txt  Result_koc_opt15_collatz_arb_10_2.txt  Result_koc_opt15_collatz_arb_10_3.txt  Result_koc_opt15_collatz_arb_10_4.txt  Result_koc_opt15_collatz_arb_10_5.txt  Result_koc_opt15_collatz_arb_10_6.txt  Result_koc_opt15_collatz_arb_10_7.txt  Result_koc_opt15_collatz_arb_10_8.txt  Result_koc_opt15_collatz_arb_10_9.txt
examples/Opt_Examples/: Prog_10.pir  Prog_9.pir  Techniques
examples/T_Test/: test.py
examples/Test/: koc_opt_sync_send.pir  koc_opt_sync_send.yaml
examples/Traces/: test
examples/audvy/: ERR.pir  pirTypes.pir
examples/choreo/: 2.txt
examples/haschor/: Readme.md
examples/netIR/: 1.txt  2.txt  3.txt
examples/stdlib/: stdlib.pir  string_test.pir  test.pir  version_test.pir
examples/stdlib_tests/: version_test.pir
examples/temp/: hash.pir  note.txt
examples/test/: #koc_unopt_sync_send.pir#  koc_unopt_send.pir  (+9 more)
test/: astutils_testcases.ml  core_test.ml  core_test_choreo.ml  dotast_test.ml  dune  emit_core_test.ml  example.yaml  func_assign.ml  gen.ml  marshal_receiver.ml  marshal_sender.ml  marshal_test.ml  msg_intf_test.ml  net_parsing_test.ml  parser_test.ml  parsing_test.ml  pipeline_gen.ml  prettyprint_test.ml  send_receive_test.ml  test.ml  test_ffi_codegen.ml  testcases.ml  toplevel_shm_test.ml  typcheck_test.ml  types_test.ml
(+2066 files in other folders)
