(test
 (name prettyprint_test)
 (modules prettyprint_test astutils_testcases testcases)
 (libraries parsing ounit2 ast_utils))

;(test
 ;(name send_receive_test)
 ;(modules send_receive_test)
 ;(libraries ounit2 http cohttp-lwt-unix logs types_test)
; (deps ../test/example.yaml))

;(test
 ;(name marshal_test)
 ;(modules marshal_test)
 ;(libraries ounit2 http types_test))

; (test
;  (name typcheck_test)
;  (modules typcheck_test)
;  (libraries parsing ounit2 typing))


; (test
;  (name parsing_test)
;  (modules parsing_test)
;  (libraries parsing ounit2 ast_core))

; (library
;  (name types_test)
;  (modules types_test))

;(executable
;(name marshal_sender)
 ;(modules marshal_sender)
; (libraries ounit2 http cohttp-lwt-unix logs types_test))

;(executable
; (name marshal_receiver)
; (modules marshal_receiver)
; (libraries ounit2 http cohttp-lwt-unix logs types_test))


(test
 (name test_ffi_codegen)
 (modules test_ffi_codegen)
 (libraries 
  ounit2 
  ppxlib 
  ast_core 
  codegen)
 (preprocess
  (pps ppxlib.metaquot)))