;runs test case prettyprint_test.ml (with astutils_testcases.ml as helper)
(test
 (name prettyprint_test)
 (modules prettyprint_test astutils_testcases)
 (libraries ounit2 parsing ast_utils))

;runs typcheck_test.ml
(test
 (name typcheck_test)
 (modules typcheck_test)
 (libraries ounit2 parsing typing ast_core))

;runs parsing_test.ml -- this does not change test coverage
(test
 (name parsing_test)
 (modules parsing_test)
 (libraries ounit2 parsing ast_core))

;(test
 ;(name send_receive_test)
 ;(modules send_receive_test)
 ;(libraries ounit2 http cohttp-lwt-unix logs types_test)
; (deps ../test/example.yaml))

;(test
 ;(name marshal_test)
 ;(modules marshal_test)
 ;(libraries ounit2 http types_test))

; (library
;  (name types_test)
;  (modules types_test))

;(executable
;(name marshal_sender)
 ;(modules marshal_sender)
; (libraries ounit2 http cohttp-lwt-unix logs types_test))

;(executable
; (name marshal_receiver)
; (modules marshal_receiver)
; (libraries ounit2 http cohttp-lwt-unix logs types_test))

; (test
;  (name test_ffi_codegen)
;  (modules test_ffi_codegen)
;  (libraries 
;   ounit2 
;   ppxlib 
;   ast_core 
;   codegen)
;  (preprocess
;   (pps ppxlib.metaquot)))