(library
 (name http_pirc)
 (public_name http_pirc)
 (modules send_receive config_parser)
 (libraries lwt yaml ast_utils parsing netgen cohttp-eio eio_main eio http)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name mock_server)
 (public_name mock_server)
 (package http_pirc)
 (modules mock_server)
 (libraries cohttp cohttp-lwt-unix lwt))
