(library
 (name http_pirc)
 (public_name http_pirc)
 (modules send_receive config_parser)
 (libraries cohttp-lwt-unix lwt lwt.unix yaml ast_utils parsing netgen cohttp-eio eio_main eio http logs eio.unix unix)
 (preprocess
  (pps lwt_ppx)))

(documentation
 (package http_pirc)
 (mld_files index user_guide developer_guide))

(executable
 (name mock_server)
 (public_name mock_server)
 (package http_pirc)
 (modules mock_server)
 (libraries cohttp cohttp-lwt-unix lwt))
