(library
 (name ocamlgen)
 (public_name http_pirc.ocamlgen)
 (libraries ast_core ast_utils ppxlib)
 (libraries ast_core ast_utils ppxlib cohttp-eio eio_main)
 (modules emit_core msg_intf toplevel_domain toplevel_http toplevel_mpi)
 (preprocess
  (pps ppxlib.metaquot))
 (instrumentation
  (backend bisect_ppx)))
