; (rule
;  (target _parser.conflicts)
;  (deps parser.conflicts)
;  (action (copy %{deps} %{target}))
;  (mode (promote (until-clean))))

(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name parsing)
 (private_modules lexer parser)
 (instrumentation
  (backend bisect_ppx))
 (libraries ast_core))
