; (rule
;  (target _parser.conflicts)
;  (deps parser.conflicts)
;  (action (copy %{deps} %{target}))
;  (mode (promote (until-clean))))

(ocamllex lexer net_lexer)

(menhir
 (modules parser net_parser))

(library
 (name parsing)
 (private_modules  net_lexer lexer parser net_parser)
 (libraries ast_core))