; (rule
;  (target _parser.conflicts)
;  (deps parser.conflicts)
;  (action (copy %{deps} %{target}))
;  (mode (promote (until-clean))))

(ocamllex lexer net_lexer)

(menhir
 (modules parser net_parser))

(library
 (name parsing)
 (package http_pirc)
 (private_modules lexer parser)
 (libraries ast_core)
 (preprocess
  (pps bisect_ppx)))
